3.4/getting-started-advanced-features.md
# 2. Advanced Features

---

**Duration:** 5 min

Here are some other cool things Backpack makes easy for you. We recommend going through them one by one, just browsing. You might not need the feature _right now_, but when _you do_, you’ll know how to find it.

---

<a name="other-operations"></a>
## Other Operations
- [Show](/docs/{{version}}/crud-operation-show) Operation - you can let your admins preview an entry
- [Reorder](/docs/{{version}}/crud-operation-reorder) Operation - you can reorder and nesting entries (hierarcy tree)
- [Revisions](/docs/{{version}}/crud-operation-revisions) Operation - you can keep a record of all modifications to an entry, and let your admin revert changes

---

<a name="other-features"></a>
## Other Features
- **Create & Update**
    - [Manage files on disk](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-media-library-file-manager) (media library)
    - [Fake fields](https://laravel-backpack.readme.io/v3.0/docs/advanced-features#section-extras-fake-fields-stored-as-json-in-the-database)
    - Translatable models and [multi-language CRUDs](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-translatable-models-and-multi-language-cruds)
    - [Tabs in create/update forms](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-tabbed-forms)
    - [inline errors](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-inline-errors) in create/update forms

--

- **ListEntries**
    - you can add a “+” button next to each entry, to allow the admin to easily preview some quick information that was too big to fit inside a columns - we call it [details row](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-details-row)
    - export all visible items in the table by adding [export buttons](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-export-buttons)
    - [Custom Search Logic](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-custom-search-logic-in-table-view) in List View
    

Additionally, here are a few more ways you can customize your CRUDs:
- [Custom Views for each CRUD](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-customize-views-for-each-crud-panel)
- [Custom CSS or JS](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-custom-css-and-js-for-crud-operations) for each CRUD Operation
- [Extra CRUD routes](https://laravel-backpack.readme.io/v3.4/docs/advanced-features#section-extra-crud-routes)

**That’s it for today!** Told you we’re done with long lessons :-) Hopefully some of the above have peaked your interest and you’ve clicked to see what Backpack can do. In the [next lesson](/docs/{{version}}/getting-started-license-and-support) we’ll go through a few other Backpack packages, that cover some recurring use cases.