4.0/getting-started-advanced-features.md
# 3. Advanced Features

---

**Duration:** 5 min

Here are some other cool things Backpack makes easy for you. We recommend going through them one by one, just browsing. You might not need the feature _right now_, but when _you do_, you’ll know how to find it.

---

<a name="other-operations"></a>
## Other Operations
- [Show](/docs/{{version}}/crud-operation-show) Operation - you can let your admins preview an entry
- [Reorder](/docs/{{version}}/crud-operation-reorder) Operation - you can reorder and nesting entries (hierarcy tree)
- [Revisions](/docs/{{version}}/crud-operation-revisions) Operation - you can keep a record of all modifications to an entry, and let your admin revert changes
- [Clone](/docs/{{version}}/crud-operation-clone) Operation - you can make a copy of an entry;
- [BulkDelete](/docs/{{version}}/crud-operation-delete) Operation - you can delete multiple items in one go;
- [BulkClone](/docs/{{version}}/crud-operation-clone) Operation - you can clone multiple items in one go;

---

<a name="other-features"></a>
## Other Features
- **Create & Update**
    - [Manage files on disk](/docs/{{version}}/crud-how-to#use-the-media-library-file-manager) (media library)
    - [Fake fields](/docs/{{version}}/crud-fields#fake-fields-all-stored-as-json-in-the-database)
    - Translatable models and [multi-language CRUDs](/docs/{{version}}/crud-operation-update#translatable-models)
    - [Tabs in create/update forms](/docs/{{version}}/crud-fields#split-fields-into-tabs)

--

- **ListEntries**
    - you can add a “+” button next to each entry, to allow the admin to easily preview some quick information that was too big to fit inside a columns - we call it [details row](/docs/{{version}}/crud-operation-list-entries#details-row)
    - export all visible items in the table by adding [export buttons](/docs/{{version}}/crud-operation-list-entries#export-buttons)
    - [custom search logic](/docs/{{version}}/crud-columns#custom-search-logic) for the columns in the list view


Additionally, here are a few more ways you can customize your CRUDs:
- [Custom Views for each CRUD](/docs/{{version}}/crud-how-to#customize-views-for-each-crud-panel)
- [Custom Content Class for each CRUD](/docs/{{version}}/crud-how-to#resize-the-content-wrapper-for-an-operation)
- [Custom CSS or JS](/docs/{{version}}/crud-how-to#customize-css-and-js-for-default-crud-operations) for each CRUD Operation

**That’s it for today!** Told you we’re done with long lessons :-) Hopefully some of the above have peaked your interest and you’ve clicked to see what Backpack can do. In the [next lesson](/docs/{{version}}/getting-started-license-and-support) we’ll go through a few other Backpack packages, that cover some recurring use cases.
